파이썬 기초 종료

--- a/python/240320/03_module.ipynb
+++ b/python/240320/03_module.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,41 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'transaction_id': 'T0000000116',\n",
-       "  'price': 210000,\n",
-       "  'payment_date': '2019-02-01 02:47:23',\n",
-       "  'customer_id': 'IK452215'},\n",
-       " {'transaction_id': 'T0000000117',\n",
-       "  'price': 170000,\n",
-       "  'payment_date': '2019-02-01 04:33:46',\n",
-       "  'customer_id': 'PL542865'},\n",
-       " {'transaction_id': 'T0000000118',\n",
-       "  'price': 120000,\n",
-       "  'payment_date': '2019-02-01 04:36:50',\n",
-       "  'customer_id': 'GD372798'}]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "select1 = \"\"\"\n",
-    "    select * from tran_1 limit 3\n",
+    "    select * from tran_1 \n",
     "\"\"\"\n",
-    "db1.sql_query(select1)"
+    "data = db1.sql_query(select1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,13 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['/Users/kang_hiee/Documents/강희/유비온/문병선 교수님 파이썬/python/240320',\n",
+       "['/Users/kang_hiee/Documents/GitHub/ubion/python/240320',\n",
        " '/Users/kang_hiee/opt/anaconda3/lib/python39.zip',\n",
        " '/Users/kang_hiee/opt/anaconda3/lib/python3.9',\n",
        " '/Users/kang_hiee/opt/anaconda3/lib/python3.9/lib-dynload',\n",
@@ -85,7 +63,7 @@
        " '/Users/kang_hiee/.ipython']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,10 +75,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /Users/kang_hiee/opt/anaconda3/lib/python3.9/site-packages (1.3.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /Users/kang_hiee/opt/anaconda3/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /Users/kang_hiee/opt/anaconda3/lib/python3.9/site-packages (from pandas) (2021.3)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /Users/kang_hiee/opt/anaconda3/lib/python3.9/site-packages (from pandas) (1.23.5)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/kang_hiee/opt/anaconda3/lib/python3.9/site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>transaction_id</th>\n",
+       "      <th>price</th>\n",
+       "      <th>payment_date</th>\n",
+       "      <th>customer_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>T0000000116</td>\n",
+       "      <td>210000</td>\n",
+       "      <td>2019-02-01 02:47:23</td>\n",
+       "      <td>IK452215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>T0000000117</td>\n",
+       "      <td>170000</td>\n",
+       "      <td>2019-02-01 04:33:46</td>\n",
+       "      <td>PL542865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>T0000000118</td>\n",
+       "      <td>120000</td>\n",
+       "      <td>2019-02-01 04:36:50</td>\n",
+       "      <td>GD372798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>T0000000119</td>\n",
+       "      <td>180000</td>\n",
+       "      <td>2019-02-01 05:25:18</td>\n",
+       "      <td>IK782104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>T0000000120</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>2019-02-01 06:22:39</td>\n",
+       "      <td>IK624245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4992</th>\n",
+       "      <td>T0000005108</td>\n",
+       "      <td>210000</td>\n",
+       "      <td>2019-06-15 02:42:41</td>\n",
+       "      <td>HD315748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4993</th>\n",
+       "      <td>T0000005109</td>\n",
+       "      <td>150000</td>\n",
+       "      <td>2019-06-15 03:36:16</td>\n",
+       "      <td>HI215420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4994</th>\n",
+       "      <td>T0000005110</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>2019-06-15 03:44:06</td>\n",
+       "      <td>IK880102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4995</th>\n",
+       "      <td>T0000005111</td>\n",
+       "      <td>210000</td>\n",
+       "      <td>2019-06-15 04:14:06</td>\n",
+       "      <td>IK074758</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4996</th>\n",
+       "      <td>T0000005112</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>2019-06-15 04:42:38</td>\n",
+       "      <td>HD444151</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4997 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     transaction_id   price         payment_date customer_id\n",
+       "0       T0000000116  210000  2019-02-01 02:47:23    IK452215\n",
+       "1       T0000000117  170000  2019-02-01 04:33:46    PL542865\n",
+       "2       T0000000118  120000  2019-02-01 04:36:50    GD372798\n",
+       "3       T0000000119  180000  2019-02-01 05:25:18    IK782104\n",
+       "4       T0000000120   50000  2019-02-01 06:22:39    IK624245\n",
+       "...             ...     ...                  ...         ...\n",
+       "4992    T0000005108  210000  2019-06-15 02:42:41    HD315748\n",
+       "4993    T0000005109  150000  2019-06-15 03:36:16    HI215420\n",
+       "4994    T0000005110   50000  2019-06-15 03:44:06    IK880102\n",
+       "4995    T0000005111  210000  2019-06-15 04:14:06    IK074758\n",
+       "4996    T0000005112   50000  2019-06-15 04:42:38    HD444151\n",
+       "\n",
+       "[4997 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sql을 통해서 받아온 데이터를 표의 형태로 출력\n",
+    "df = pd.DataFrame(data)\n",
+    "df"
+   ]
   },
   {
    "cell_type": "code",
