--- a/python/240322/01_sales.ipynb
+++ b/python/240322/01_sales.ipynb
@@ -18,102 +18,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Region</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Item Type</th>\n",
-       "      <th>Sales Channel</th>\n",
-       "      <th>Order Priority</th>\n",
-       "      <th>Order Date</th>\n",
-       "      <th>Order ID</th>\n",
-       "      <th>Ship Date</th>\n",
-       "      <th>Units Sold</th>\n",
-       "      <th>Unit Price</th>\n",
-       "      <th>Unit Cost</th>\n",
-       "      <th>Total Revenue</th>\n",
-       "      <th>Total Cost</th>\n",
-       "      <th>Total Profit</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Sub-Saharan Africa</td>\n",
-       "      <td>Chad</td>\n",
-       "      <td>Office Supplies</td>\n",
-       "      <td>Online</td>\n",
-       "      <td>L</td>\n",
-       "      <td>1/27/2011</td>\n",
-       "      <td>292494523</td>\n",
-       "      <td>2/12/2011</td>\n",
-       "      <td>4484</td>\n",
-       "      <td>651.21</td>\n",
-       "      <td>524.96</td>\n",
-       "      <td>2920025.64</td>\n",
-       "      <td>2353920.64</td>\n",
-       "      <td>566105.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Europe</td>\n",
-       "      <td>Latvia</td>\n",
-       "      <td>Beverages</td>\n",
-       "      <td>Online</td>\n",
-       "      <td>C</td>\n",
-       "      <td>12/28/2015</td>\n",
-       "      <td>361825549</td>\n",
-       "      <td>1/23/2016</td>\n",
-       "      <td>1075</td>\n",
-       "      <td>47.45</td>\n",
-       "      <td>31.79</td>\n",
-       "      <td>51008.75</td>\n",
-       "      <td>34174.25</td>\n",
-       "      <td>16834.5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               Region Country        Item Type Sales Channel Order Priority  \\\n",
-       "0  Sub-Saharan Africa    Chad  Office Supplies        Online              L   \n",
-       "1              Europe  Latvia        Beverages        Online              C   \n",
-       "\n",
-       "   Order Date   Order ID  Ship Date  Units Sold  Unit Price  Unit Cost  \\\n",
-       "0   1/27/2011  292494523  2/12/2011        4484      651.21     524.96   \n",
-       "1  12/28/2015  361825549  1/23/2016        1075       47.45      31.79   \n",
-       "\n",
-       "   Total Revenue  Total Cost  Total Profit  \n",
-       "0     2920025.64  2353920.64      566105.0  \n",
-       "1       51008.75    34174.25       16834.5  "
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/kang_hiee/Library/Python/3.13/lib/python/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "    ~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/var/folders/j6/txnqzgpx1wx4nmdw439z1jn80000gn/T/ipykernel_2845/3466443425.py\", line 2, in <module>\n",
+      "    import pandas as pd\n",
+      "ModuleNotFoundError: No module named 'pandas'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/kang_hiee/Library/Python/3.13/lib/python/site-packages/IPython/core/interactiveshell.py\", line 2168, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^\n",
+      "        etype, value, tb, tb_offset=tb_offset\n",
+      "        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "    )\n",
+      "    ^\n",
+      "  File \"/Users/kang_hiee/Library/Python/3.13/lib/python/site-packages/IPython/core/ultratb.py\", line 1454, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^\n",
+      "        self, etype, evalue, etb, tb_offset, number_of_lines_of_context\n",
+      "        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "    )\n",
+      "    ^\n",
+      "  File \"/Users/kang_hiee/Library/Python/3.13/lib/python/site-packages/IPython/core/ultratb.py\", line 1345, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^\n",
+      "        self, etype, value, tb, tb_offset, number_of_lines_of_context\n",
+      "        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "    )\n",
+      "    ^\n",
+      "  File \"/Users/kang_hiee/Library/Python/3.13/lib/python/site-packages/IPython/core/ultratb.py\", line 1192, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "                                                           tb_offset)\n",
+      "                                                           ^^^^^^^^^^\n",
+      "  File \"/Users/kang_hiee/Library/Python/3.13/lib/python/site-packages/IPython/core/ultratb.py\", line 1082, in format_exception_as_a_whole\n",
+      "    self.get_records(etb, number_of_lines_of_context, tb_offset) if etb else []\n",
+      "    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/kang_hiee/Library/Python/3.13/lib/python/site-packages/IPython/core/ultratb.py\", line 1179, in get_records\n",
+      "    res = list(stack_data.FrameInfo.stack_data(etb, options=options))[tb_offset:]\n",
+      "          ~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/kang_hiee/Library/Python/3.13/lib/python/site-packages/stack_data/core.py\", line 597, in stack_data\n",
+      "    yield from collapse_repeated(\n",
+      "    ...<4 lines>...\n",
+      "    )\n",
+      "  File \"/Users/kang_hiee/Library/Python/3.13/lib/python/site-packages/stack_data/utils.py\", line 83, in collapse_repeated\n",
+      "    yield from map(mapper, original_group)\n",
+      "  File \"/Users/kang_hiee/Library/Python/3.13/lib/python/site-packages/stack_data/core.py\", line 587, in mapper\n",
+      "    return cls(f, options)\n",
+      "           ~~~^^^^^^^^^^^^\n",
+      "  File \"/Users/kang_hiee/Library/Python/3.13/lib/python/site-packages/stack_data/core.py\", line 551, in __init__\n",
+      "    self.executing = Source.executing(frame_or_tb)\n",
+      "                     ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^\n",
+      "  File \"/Users/kang_hiee/Library/Python/3.13/lib/python/site-packages/executing/executing.py\", line 283, in executing\n",
+      "    assert_(new_stmts <= stmts)\n",
+      "    ~~~~~~~^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/kang_hiee/Library/Python/3.13/lib/python/site-packages/executing/executing.py\", line 80, in assert_\n",
+      "    raise AssertionError(str(message))\n",
+      "AssertionError\n"
+     ]
     }
    ],
    "source": [
@@ -1086,7 +1066,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.13.0a5"
   }
  },
  "nbformat": 4,
